[package]
name = "binator_network"
authors = ["Stargateur"]
version = "0.0.1"
description = "binator network"
license = "Zlib"
repository = "https://github.com/binator/network"
readme = "readme.md"
keywords = ["parsing", "combinator", "network"]
categories = ["parsing"]
edition = "2021"

include = [
  "readme.md",
  "license.md",
  "Cargo.toml",
  "rustfmt.toml",
  "src/**/*.rs",
]

[dependencies]
binator = "0.3.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
const_format = { version = "0.2", features = ["const_generics"] }
paste = "1"

[dependencies.tracing]
version = "0.1"
optional = true

[dev-dependencies]
pretty_assertions = "1"
derive-new = "0.5"
derive_more = "0.99"

binator = { version = "0.3.0", features = ["tracing"]}

tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
env_logger = "0.9"
test-log = { version = "0.2.10", features = ["trace"] }